name:                gameai-chess
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain
license-file:        LICENSE
author:              David Farrell
maintainer:          shokku.ra@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable gameai-chess
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9, mtl >=2.2, data-default >=0.5, lens >=4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W
